--- a/index.html
+++ b/index.html
@@ -179,9 +179,7 @@
                                 <i class="fas fa-table me-1"></i>
                                 Chart 3
                             </div>
-                            <div class="card-body">
-hola1
-                            </div>
+                            <div id="cont-tabla"></div> 
                         </div>
                     </div>
                 </main>
