--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <div class="row">
                             <div class="col-xl-3 col-md-6">
                                 <div class="card bg-primary text-white mb-4">
-                                    <div class="card-body">Timezone</div>
+                                    <div class="card-body"><i class="fa-solid fa-location-dot"></i>Timezone</div>
                                     <div class="card-footer d-flex align-items-center justify-content-between" id="timezone">
                                         
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
@@ -54,7 +54,7 @@
                             </div>
                             <div class="col-xl-3 col-md-6">
                                 <div class="card bg-warning text-white mb-4">
-                                    <div class="card-body">Temperatura</div>
+                                    <div class="card-body"><i class="fa-solid fa-temperature-half"></i>Temperatura</div>
                                     <div class="card-footer d-flex align-items-center justify-content-between" id="temperatura">
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                     </div>
@@ -62,7 +62,7 @@
                             </div>
                             <div class="col-xl-3 col-md-6">
                                 <div class="card bg-success text-white mb-4">
-                                    <div class="card-body">Vientos</div>
+                                    <div class="card-body"><i class="fa-solid fa-wind"></i>Vientos</div>
                                     <div class="card-footer d-flex align-items-center justify-content-between" id="vientos">
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                     </div>
@@ -70,7 +70,7 @@
                             </div>
                             <div class="col-xl-3 col-md-6">
                                 <div class="card bg-danger text-white mb-4">
-                                    <div class="card-body">Latitud</div>
+                                    <div class="card-body"><i class="fa-solid fa-earth-americas"></i>Latitud</div>
                                     <div class="card-footer d-flex align-items-center justify-content-between" id="latitud">
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                     </div>
